--- a/unittests/backends/qpp_observe/CMakeLists.txt
+++ b/unittests/backends/qpp_observe/CMakeLists.txt
@@ -10,9 +10,15 @@ add_library(nvqir-qpp-observe-test SHARED QPPObserveBackend.cpp)
 find_package(OpenMP)
 set (QPP_DEPENDENCIES "")
 if(OpenMP_CXX_FOUND)
-message(STATUS "OpenMP Found. Adding build flags to QPP Backend: ${OpenMP_CXX_FLAGS}.")
-list(APPEND QPP_DEPENDENCIES OpenMP::OpenMP_CXX)
-  target_compile_definitions(nvqir-qpp-observe-test PRIVATE -DHAS_OPENMP=1)
+    message(STATUS "OpenMP Found. Adding build flags to QPP Backend: ${OpenMP_CXX_FLAGS}.")
+    if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+        #target_link_libraries(nvqir-qpp-observe-test PRIVATE OpenMP::OpenMP_CXX)
+        #target_compile_options(nvqir-qpp-observe-test PRIVATE "/openmp:llvm")
+        #target_compile_definitions(nvqir-qpp-observe-test PRIVATE -DHAS_OPENMP=1)
+    else()
+        list(APPEND QPP_DEPENDENCIES OpenMP::OpenMP_CXX)
+        target_compile_definitions(nvqir-qpp-observe-test PRIVATE -DHAS_OPENMP=1)
+    endif()
 endif()
 
 target_include_directories(nvqir-qpp-observe-test
