--- a/runtime/cudaq/CMakeLists.txt
+++ b/runtime/cudaq/CMakeLists.txt
@@ -9,7 +9,9 @@
 add_subdirectory(spin)
 
 set(LIBRARY_NAME cudaq)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ctad-maybe-unsupported")
+#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ctad-maybe-unsupported")
+target_add_compile_flags_if_supported(${LIBRARY_NAME} PRIVATE -Wno-ctad-maybe-unsupported)
+
 set(INTERFACE_POSITION_INDEPENDENT_CODE ON)
 
 # Create the CUDA Quantum Library
@@ -26,9 +28,11 @@ target_include_directories(${LIBRARY_NAME}
   PRIVATE .)
 
 target_link_libraries(${LIBRARY_NAME}
-  PUBLIC dl cudaq-spin cudaq-common cudaq-nlopt cudaq-ensmallen
+  PUBLIC cudaq-spin cudaq-common cudaq-nlopt cudaq-ensmallen
   PRIVATE fmt::fmt-header-only)
-
+if (NOT MSVC)
+    target_link_libraries(${LIBRARY_NAME} PUBLIC dl)
+endif()
 cudaq_library_set_rpath(${LIBRARY_NAME})
 
 add_subdirectory(qis/managers)
