--- a/runtime/cudaq/platform/default/CMakeLists.txt
+++ b/runtime/cudaq/platform/default/CMakeLists.txt
@@ -7,7 +7,8 @@
 # ============================================================================ #
 
 set(LIBRARY_NAME cudaq-platform-default)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ctad-maybe-unsupported")
+#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ctad-maybe-unsupported")
+target_add_compile_flags_if_supported(${LIBRARY_NAME} PRIVATE -Wno-ctad-maybe-unsupported)
 set(INTERFACE_POSITION_INDEPENDENT_CODE ON)
 
 set(CUDAQ_DEFAULTPLATFORM_SRC
@@ -23,8 +24,10 @@ target_include_directories(${LIBRARY_NAME}
     PRIVATE . ../../)
 
 target_link_libraries(${LIBRARY_NAME}
-  PUBLIC pthread cudaq-em-qir cudaq-spin cudaq-common PRIVATE fmt::fmt-header-only)
-
+  PUBLIC cudaq-em-qir cudaq-spin cudaq-common PRIVATE fmt::fmt-header-only)
+if (NOT MSVC)
+  target_link_libraries(${LIBRARY_NAME} PUBLIC pthread)
+endif()
 cudaq_library_set_rpath(${LIBRARY_NAME})
 
 install(TARGETS ${LIBRARY_NAME} DESTINATION lib)
