--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -71,11 +71,8 @@ macro (create_tests_with_backend NVQIR_BACKEND EXTRA_BACKEND_TESTER)
   if (${NVQIR_BACKEND} STREQUAL "dm")
      target_compile_definitions(${TEST_EXE_NAME} PRIVATE -DCUDAQ_BACKEND_DM)
   endif()
-  if (${NVQIR_BACKEND} STREQUAL "tensornet")
+  if (${NVQIR_BACKEND} STREQUAL "tensornet" OR ${NVQIR_BACKEND} STREQUAL "tensornet-mps")
      target_compile_definitions(${TEST_EXE_NAME} PRIVATE -DCUDAQ_BACKEND_TENSORNET)
-  endif()
-  if (${NVQIR_BACKEND} STREQUAL "tensornet-mps")
-     target_compile_definitions(${TEST_EXE_NAME} PRIVATE -DCUDAQ_BACKEND_TENSORNET -DCUDAQ_BACKEND_TENSORNET_MPS)
   endif()
   gtest_discover_tests(${TEST_EXE_NAME})
 endmacro()
