--- a/runtime/cudaq/platform/mqpu/nvcf.config
+++ b/runtime/cudaq/platform/mqpu/nvcf.config
@@ -17,25 +17,8 @@ PLATFORM_LIBRARY=mqpu
 # QPU subtype
 PLATFORM_QPU=NvcfSimulatorQPU
 
-COMPILER_FLAGS="$COMPILER_FLAGS -DCUDAQ_REMOTE_SIM"
-
-if ${LIBRARY_MODE}; then
-	# In library mode, we enforce that no custom fallback host compiler has been set via `cmake-host-compiler` option.
-	# Note: even if another Clang-based compiler is set, we cannot guarantee that it is compatible with the LLVM version
-	# that the CUDA Quantum runtime is compiled against. Hence, we don't support custom host compiler for this platform.
-	if [[ "$CMAKE_FALLBACK_HOST_CXX" != "$CXX" ]]; then 
-		error_exit "Using remote simulation target in library mode with a custom cmake-host-compiler is unsupported. Please use the default nvq++ host compiler or enable MLIR mode."
-	fi 
-	
-	COMPILER_FLAGS="$COMPILER_FLAGS -fembed-bitcode=all"
-	# Clang made "out of line atomics" the default on arm64 targets (https://reviews.llvm.org/D93585);
-	# requiring to link against `libclang_rt.builtins` on the server side when JIT'ing. 
-	# Hence, disable it when using the remote platform. 
-	if [ "$(uname -m)" == "aarch64" ]; then
-		COMPILER_FLAGS="$COMPILER_FLAGS -mno-outline-atomics"
-	fi
-	LINKER_FLAGS="$LINKER_FLAGS -rdynamic"
-fi
+# Disable library mode
+LIBRARY_MODE=false
 
 PLATFORM_EXTRA_ARGS=""
 # NB: extra arguments always take the form:
