--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -15,6 +15,7 @@ on:
           - iqm
           - oqc
           - quantinuum
+          - nvcf
       single_test_name:
         type: string
         required: false
@@ -252,4 +253,48 @@ jobs:
               ;;
             esac
           done
+        shell: bash
+      
+      - name: Setup NVCF test function
+        if: github.event_name == 'schedule' || inputs.target == 'nightly' || inputs.target == 'nvcf'
+        run: |
+          # Deploy a test function version with the image for testing
+
+      - name: Submit to NVCF 
+        if: (success() || failure()) && (inputs.target == 'nvcf' || github.event_name == 'schedule' || inputs.target == 'nightly')
+        run: |
+          echo "### Submit to NVCF" >> $GITHUB_STEP_SUMMARY
+          export NVCF_API_KEY="${{ secrets.NVCF_API_KEY }}"
+          export NVCF_FUNCTION_ID="${{ secrets.NVCF_FUNCTION_ID }}"
+          export CUDAQ_LOG_LEVEL="info"
+          set +e # Allow script to keep going through errors
+          test_err_sum=0
+          wget https://curl.haxx.se/ca/cacert.pem 
+          for filename in ${{ steps.gettests.outputs.testlist }}; do
+            case $filename in
+              targettests/nvcf/*)
+                [ -e "$filename" ] || echo "::error::Couldn't find files ($filename)"
+                nvq++ -v $filename --target nvcf
+                test_status=$?
+                if [ $test_status -eq 0 ]; then
+                  ./a.out
+                  test_status=$?
+                  if [ $test_status -eq 0 ]; then
+                    echo ":white_check_mark: Successfully ran test: $filename" >> $GITHUB_STEP_SUMMARY
+                  else
+                    echo ":x: Test failed (failed to execute): $filename" >> $GITHUB_STEP_SUMMARY
+                    test_err_sum=$((test_err_sum+1))
+                  fi
+                else
+                  echo ":x: Test failed (failed to compile): $filename" >> $GITHUB_STEP_SUMMARY
+                  test_err_sum=$((test_err_sum+1))
+                fi
+              ;;
+            esac
+          done
+          set -e # Re-enable exit code error checking
+          if [ ! $test_err_sum -eq 0 ]; then
+            echo "::error::${test_err_sum} tests failed. See step summary for a list of failures"
+            exit 1
+          fi
         shell: bash
