--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -44,9 +44,10 @@ jobs:
 
       - name: Get code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ steps.commit-sha.outputs.sha }}
-          fetch-depth: 1
+        # Debug: get code in this branch
+        #with:
+        #  ref: ${{ steps.commit-sha.outputs.sha }}
+        #  fetch-depth: 1
 
       - name: Get tests
         id: gettests
