Prototype num-gpus selection

--- a/runtime/cudaq/platform/mqpu/nvqc.config
+++ b/runtime/cudaq/platform/mqpu/nvqc.config
@@ -33,6 +33,9 @@ while [ $# -gt 1 ]; do
 	--nvqc-nqpus)
 		PLATFORM_EXTRA_ARGS="$PLATFORM_EXTRA_ARGS;nqpus;$2"
 		;;
+	--nvqc-ngpus)
+		PLATFORM_EXTRA_ARGS="$PLATFORM_EXTRA_ARGS;ngpus;$2"
+		;;
 	--nvqc-function-id)
 		PLATFORM_EXTRA_ARGS="$PLATFORM_EXTRA_ARGS;function_id;$2"
 		;;
