--- a/.github/workflows/docker_images.yml
+++ b/.github/workflows/docker_images.yml
@@ -758,6 +758,8 @@ jobs:
           fail-on-cache-miss: true
 
       - name: Validate cuda-quantum image
+        # FIXME: add NVQC_SERVICE_KEY to the CI environment
+        environment: ghcr-deployment
         run: |
           if ${{ steps.restore.outcome != 'skipped' }}; then
             load_output=`docker load --input "${{ needs.cudaq_image.outputs.tar_archive }}"`
